--- a/assets/homepage/scripts/style.css
+++ b/assets/homepage/scripts/style.css
@@ -1,32 +1,32 @@
-h3{
-  text-align: center;
+h3 {
+	text-align: center;
 }
 
-#noShow{
-  display: none;
+#noShow {
+	display: none;
 }
 .popupWindow {
-  box-shadow: none !important;
-  z-index: 10001;
-  max-width: 600px;
-  padding: 60px;
-  padding-bottom: 0;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+	box-shadow: none !important;
+	z-index: 10001;
+	max-width: 600px;
+	padding: 60px;
+	padding-bottom: 0;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
 }
 
-#closeButton{
-  display: none;
-  position: fixed;
-  right: 20px;
-  top: 20px;
-  width: 42px;
-  height: 42px; 
+#closeButton {
+	display: none;
+	position: fixed;
+	right: 20px;
+	top: 20px;
+	width: 42px;
+	height: 42px;
 }
 
-#closeButton:hover{
-  cursor: pointer
+#closeButton:hover {
+	cursor: pointer;
 }
