--- a/assets/homepage/scripts/style.css
+++ b/assets/homepage/scripts/style.css
@@ -25,8 +25,10 @@ h3 {
 	top: 20px;
 	width: 42px;
 	height: 42px;
+	filter: opacity(50%)
 }
 
 #closeButton:hover {
 	cursor: pointer;
+	filter: opacity(100%)
 }
