--- a/assets/global/scripts/global.css
+++ b/assets/global/scripts/global.css
@@ -1,21 +1,20 @@
-
 /*Importing font from file system*/
 @font-face {
-  font-family: "SF Pro Display";
-  src: url("../../fonts/SF-Pro-Display-Regular.otf");
+	font-family: 'SF Pro Display';
+	src: url('../../fonts/SF-Pro-Display-Regular.otf');
 }
 
 /*Basic font styling for everything*/
 * {
-  font-family: "SF Pro Display";
-  color: white;
+	font-family: 'SF Pro Display';
+	color: white;
 }
 
 body {
-  margin: 0;
+	margin: 0;
 	width: 100%;
 	height: 100%;
-	background: linear-gradient(-45deg, #16BFFD, #CB3066);
+	background: linear-gradient(-45deg, #16bffd, #cb3066);
 	background-size: 400% 450%;
 	-webkit-animation: Gradient 5s ease infinite;
 	-moz-animation: Gradient 5s ease infinite;
@@ -24,108 +23,109 @@ body {
 
 @-webkit-keyframes Gradient {
 	0% {
-		background-position: 0% 50%
+		background-position: 0% 50%;
 	}
 	50% {
-		background-position: 100% 50%
+		background-position: 100% 50%;
 	}
 	100% {
-		background-position: 0% 50%
+		background-position: 0% 50%;
 	}
 }
 
 @-moz-keyframes Gradient {
 	0% {
-		background-position: 0% 50%
+		background-position: 0% 50%;
 	}
 	50% {
-		background-position: 100% 50%
+		background-position: 100% 50%;
 	}
 	100% {
-		background-position: 0% 50%
+		background-position: 0% 50%;
 	}
 }
 
 @keyframes Gradient {
 	0% {
-		background-position: 0% 50%
+		background-position: 0% 50%;
 	}
 	50% {
-		background-position: 100% 50%
+		background-position: 100% 50%;
 	}
 	100% {
-		background-position: 0% 50%
+		background-position: 0% 50%;
 	}
 }
 
 .headul {
-  list-style: none;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  -webkit-box-align: center;
-  align-items: center;
+	list-style: none;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	-webkit-box-align: center;
+	align-items: center;
 }
 
 .headli {
 	list-style-type: none;
-  float: left;
+	float: left;
 }
 
 h2 {
 	text-transform: capitalize;
-	font-size:25pt;
+	font-size: 25pt;
 }
 
 h3 {
 	text-transform: capitalize;
-  font-size: 20pt;
+	font-size: 20pt;
 }
 
-p, li{
+p,
+li {
 	font-size: 15pt;
 }
 
-.bigbox{
-  background: #2F3439;
-  box-shadow: 0 4px 40px 0 rgba(0, 0, 0, 0.507), 0 2px 50px 0 rgba(0, 0, 0, 0.945) !important;
-  border-radius: 30px;
-  padding-top: 15px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-bottom: 15px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 75px;
-  width: calc(80% - 50px);
-  max-width: 1200px;
-  line-height: 1;
+.bigbox {
+	background: #2f3439;
+	box-shadow: 0 4px 40px 0 rgba(0, 0, 0, 0.507), 0 2px 50px 0 rgba(0, 0, 0, 0.945) !important;
+	border-radius: 30px;
+	padding-top: 15px;
+	padding-left: 30px;
+	padding-right: 30px;
+	padding-bottom: 15px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 75px;
+	width: calc(80% - 50px);
+	max-width: 1200px;
+	line-height: 1;
 }
 
 /* Project link boxes*/
 .boxforlink {
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
-  border-radius: 25px;
-  padding-top: 5px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-bottom: 5px;
-  margin-bottom: 30px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 75%;
-  background: linear-gradient(to top right, #ff650c , #ff380c);
-  -webkit-transition: padding 0.5s ease; /*For Safari*/
-  transition: padding 0.25s ease;
-  transition: 0.25s;
-    text-align: center;
+	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+	border-radius: 25px;
+	padding-top: 5px;
+	padding-left: 30px;
+	padding-right: 30px;
+	padding-bottom: 5px;
+	margin-bottom: 30px;
+	margin-left: auto;
+	margin-right: auto;
+	width: 75%;
+	background: linear-gradient(to top right, #ff650c, #ff380c);
+	-webkit-transition: padding 0.5s ease; /*For Safari*/
+	transition: padding 0.25s ease;
+	transition: 0.25s;
+	text-align: center;
 }
 
-.boxforlink:hover{
-  padding-top: 20px;
-  padding-bottom: 20px;
+.boxforlink:hover {
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 a {
@@ -134,233 +134,237 @@ a {
 
 /*Footer*/
 #footer {
-  background: #2F3439;
-  box-shadow: 0 4px 40px 0 rgba(0, 0, 0, 0.507), 0 2px 50px 0 rgba(0, 0, 0, 0.945) !important;
-  border-radius: 15px;
-  padding-top: 15px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-bottom: 15px;
-  margin-left: auto;
-  margin-right: auto;
-  bottom: -150px;
-  width: calc(95% - 50px);
-  max-width: 1600px;
-  overflow: hidden;
-  margin-bottom: 25px;
-  position: relative;
+	background: #2f3439;
+	box-shadow: 0 4px 40px 0 rgba(0, 0, 0, 0.507), 0 2px 50px 0 rgba(0, 0, 0, 0.945) !important;
+	border-radius: 15px;
+	padding-top: 15px;
+	padding-left: 30px;
+	padding-right: 30px;
+	padding-bottom: 15px;
+	margin-left: auto;
+	margin-right: auto;
+	bottom: -150px;
+	width: calc(95% - 50px);
+	max-width: 1600px;
+	overflow: hidden;
+	margin-bottom: 25px;
+	position: relative;
 }
 
 #footer a {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 .footerIconContainer {
-  border-radius: 30%;
-  background-color: #2F3439;
-  box-shadow: -20px 0 30px 10px #2F3439;
-  padding-top: 20px;
-  transition: all 0.4s ease;
-  -webkit-transition: all 0.4s ease;
-  -moz-transition: all 0.4s ease;
-  -o-transition: all 0.4s ease;
-  -ms-transition: all 0.4s ease;
+	border-radius: 30%;
+	background-color: #2f3439;
+	box-shadow: -20px 0 30px 10px #2f3439;
+	padding-top: 20px;
+	transition: all 0.4s ease;
+	-webkit-transition: all 0.4s ease;
+	-moz-transition: all 0.4s ease;
+	-o-transition: all 0.4s ease;
+	-ms-transition: all 0.4s ease;
 }
 
 /*Footer Button */
 .footerButton {
-  border: none;
-  vertical-align: middle;
-  background: linear-gradient(to right, #55B49D , #2B7DCA);
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
-  text-align: center;
-  border-radius: 25px;
-  box-sizing: border-box;
-  padding-top: 6px;
-  padding-left: 5px;
-  color:rgba(255,255,255,0);
-  font-size: 0;
-  min-width: 40px;
-  max-width: 40px;
-  min-height: 40px;
-  max-height: 40px;
-  display: inline-block;
-  overflow: hidden;
-  transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
+	border: none;
+	vertical-align: middle;
+	background: linear-gradient(to right, #55b49d, #2b7dca);
+	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+	text-align: center;
+	border-radius: 25px;
+	box-sizing: border-box;
+	padding-top: 6px;
+	padding-left: 5px;
+	color: rgba(255, 255, 255, 0);
+	font-size: 0;
+	min-width: 40px;
+	max-width: 40px;
+	min-height: 40px;
+	max-height: 40px;
+	display: inline-block;
+	overflow: hidden;
+	transition: all 0.3s ease;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	-ms-transition: all 0.3s ease;
 }
 .footerButton:hover {
-  cursor:pointer;
-  color: white;
-  padding-left: 15px;
-  padding-right: 15px;
-  max-width: 300px;
-  font-size: 16pt;
+	cursor: pointer;
+	color: white;
+	padding-left: 15px;
+	padding-right: 15px;
+	max-width: 300px;
+	font-size: 16pt;
 }
 /*Footer Button Icons*/
 .footerButtonIcon {
-  margin-left: 4px;
-  margin-top: 3px;
-  vertical-align: middle;
-  width:22px;
-  height:22px;
-  transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
+	margin-left: 4px;
+	margin-top: 3px;
+	vertical-align: middle;
+	width: 22px;
+	height: 22px;
+	transition: all 0.3s ease;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	-ms-transition: all 0.3s ease;
 }
 .footerButton:hover .footerButtonIcon {
-  margin-left: 0;
-  margin-right: 10px;
+	margin-left: 0;
+	margin-right: 10px;
 }
 
 /*Footer Text*/
 .footerText {
-  font-size: 13.5pt;
-  margin: 0;
+	font-size: 13.5pt;
+	margin: 0;
 }
 
-
 .footerIconContainer {
-  box-shadow: none;
-  padding-top: 0;
-  padding-bottom: 20px;
-  position: relative;
-  width: 100%;
-  right: 0;
+	box-shadow: none;
+	padding-top: 0;
+	padding-bottom: 20px;
+	position: relative;
+	width: 100%;
+	right: 0;
 }
 
 .footerButtonIcon {
-  margin-right: 6px !important;
+	margin-right: 6px !important;
 }
 
 #footer {
-  text-align: center !important;
+	text-align: center !important;
 }
 
-
-.footerText .boxforlink{
-  padding:3px;
-  width:33%!important;
+.footerText .boxforlink {
+	padding: 3px;
+	width: 33% !important;
 }
 
-.center{
-  justify-content: center;
-  display: flex;
+.center {
+	justify-content: center;
+	display: flex;
 }
-
 
 /* The container */
 .checkcont {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 22px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+	display: block;
+	position: relative;
+	padding-left: 35px;
+	margin-bottom: 12px;
+	cursor: pointer;
+	font-size: 22px;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 /* Hide the browser's default checkbox */
 .checkcont input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
+	height: 0;
+	width: 0;
 }
 
 /* Create a custom checkbox */
 .checkmark {
-  position: absolute;
-  height: 10px;
-  width: 10px;
-  background: rgba(200, 200, 255, 0.2);
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.07);
-  border-style: solid;
-  border-color: rgba(255, 255, 255, 0.05);
-  border-width: 2px;
-  border-radius: 5px;
+	position: absolute;
+	height: 10px;
+	width: 10px;
+	background: rgba(200, 200, 255, 0.2);
+	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.07);
+	border-style: solid;
+	border-color: rgba(255, 255, 255, 0.05);
+	border-width: 2px;
+	border-radius: 5px;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
 .checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
+	content: '';
+	position: absolute;
+	display: none;
 }
 
 /* Show the checkmark when checked */
 .checkcont input:checked ~ .checkmark:after {
-  display: block;
+	display: block;
 }
 
 /* Style the checkmark/indicator */
 .checkcont .checkmark:after {
-  left: 3px;
-  top: -1px;
-  width: 2px;
-  height: 7px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+	left: 3px;
+	top: -1px;
+	width: 2px;
+	height: 7px;
+	border: solid white;
+	border-width: 0 3px 3px 0;
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
 }
 
 .logo {
-  width: 150px;
-  height: 150px;
-  margin-bottom: 15px;
+	width: 150px;
+	height: 150px;
+	margin-bottom: 15px;
 }
 
 .logo:hover {
-  opacity: .5;
+	opacity: 0.5;
 }
 
-.bigbox{
-  transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
+.bigbox {
+	transition: all 0.3s ease;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	-ms-transition: all 0.3s ease;
 }
 
 @media screen and (max-width: 850px) {
-	.bigbox{
-    width: 80%;
-  }
+	.bigbox {
+		width: 80%;
+	}
 }
 
 .popupWindow {
-    box-shadow: none !important;
-    z-index: 10001;
-    max-width: 600px;
-    padding: 30px;
-    padding-bottom: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    background: black;
-    border-radius: 15px;
+	box-shadow: none !important;
+	z-index: 10001;
+	max-width: 600px;
+	padding: 30px;
+	padding-bottom: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	background: black;
+	border-radius: 15px;
 }
 
 .popupWrapper {
 	display: none;
-	background-color: rgba(0,0,0,.6);
+	background-color: rgba(0, 0, 0, 0.6);
 	position: fixed;
 	top: 0;
 	left: 0;
 	min-width: 100%;
 	min-height: 100%;
 	z-index: 1000;
+}
+
+.footerLinkText {
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
