--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -21,3 +21,14 @@
 		opacity: 0.5;
 	}
 }
+
+.class404 {
+	width: calc(100vw - 200px);
+	max-width: 400px;
+	background-color: #f7eaea;
+	box-shadow: 27px 43px 92px -6px rgba(0, 0, 0, 0.75);
+	width: 100%;
+	padding: 15px 50px;
+	box-sizing: border-box;
+	border-radius: 55px;
+}
