--- a/static/app.css
+++ b/static/app.css
@@ -1,11 +1,20 @@
 html,
-body {
+body,
+#main {
 	position: relative;
 	width: 100%;
 	height: 100%;
 }
-
+html {
+	background: linear-gradient(153deg, #667eff 5%, #ff849d 100%);
+	background-repeat: no-repeat;
+	background-size: cover;
+	margin: 0;
+	padding: 0;
+}
 body {
+	margin: 0;
+	padding: 0;
 	color: #333;
 	margin: 0;
 	padding: 8px;
