--- a/static/app.css
+++ b/static/app.css
@@ -1,26 +1,38 @@
 html,
 body,
 #main {
-	position: relative;
 	width: 100%;
 	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 html {
 	background: linear-gradient(153deg, #667eff 5%, #ff849d 100%);
 	background-repeat: no-repeat;
 	background-size: cover;
-	margin: 0;
-	padding: 0;
 }
 body {
-	margin: 0;
-	padding: 0;
 	color: #333;
-	margin: 0;
-	padding: 8px;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue',
 		sans-serif;
+}
+
+.app {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex: 1 0 auto;
+	align-self: auto;
 }
 
 a {
