feat: backdrop blur on chromium environments, better responsivity

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	.firefox {
+		@apply before:absolute before:bg-main-img before:top-[0] before:left-[0] before:right-[0] before:bottom-[0] before:content-[''] before:bg-fixed before:bg-center before:bg-cover before:blur-md;
+	}
+	.chrome {
+		@apply backdrop-blur-lg;
+	}
+}
