--- a/src/app.css
+++ b/src/app.css
@@ -9,6 +9,10 @@
 	.chrome {
 		@apply backdrop-blur-lg;
 	}
+
+	.bg-extends-white {
+		@apply after:absolute after:top-0 after:bottom-0 after:left-0 after:right-0 after:content-[""] after:bg-white after:bg-opacity-70 dark:after:hidden;
+	}
 }
 
 body,
