chore: more astro conversion

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Footer from "../components/footer.svelte";
-import Project from "../components/project.svelte";
+import Project from "../components/project.astro";
 ---
 
 <!DOCTYPE html>
