--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -120,7 +120,7 @@ import Project from "../components/project.astro";
           </div>
         </div>
       </div>
-      <Footer />
+      <Footer client:load />
     </div>
   </body>
 </html>
