fix: i cant spell

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ import Project from "../components/project.astro";
               >, <a
                 class="font-semibold underline"
                 href="https://www.gosystem.co.uk/">goSystem</a
-              > amd
+              > and
               <a class="font-semibold underline" href="https://ukrepmed.com/"
                 >UKRepMed</a
               >
