--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Project from "../components/project.astro";
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="google-site-verification"
       content="ZNKmWP18vZXTTbX5TIxztrzDVJdQTPCJavz4NQ5yGXU"
