--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Project from "../components/project.astro";
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="google-site-verification"
       content="ZNKmWP18vZXTTbX5TIxztrzDVJdQTPCJavz4NQ5yGXU"
@@ -27,7 +27,7 @@ import Project from "../components/project.astro";
   </head>
   <body>
     <div
-      class="flex min-h-screen flex-col bg-main-img bg-cover bg-fixed bg-center text-white"
+      class="flex min-h-screen flex-col bg-main-img2 bg-cover bg-fixed bg-center text-white"
     >
       <div class="flex flex-1 items-center justify-center">
         <div
