--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,65 +56,68 @@ import Project from "../components/project.astro";
                             Currently I'm an Innovation Engineer @ <a
                                 class="font-semibold underline"
                                 href="https://www.matillion.com/">Matillion</a
-                            >
-                        </p>
-                        <p class="my-3">
-                            <span class="hidden sm:inline">-</span>
-                            In the past, I've done work for companies such as
-                            <a
+                            > and im looking to re-continue my studies at <a
                                 class="font-semibold underline"
-                                href="https://ukrepmed.com/">UKRepMed</a
-                            >
+                                href="https://www.royalholloway.ac.uk/">RHUL</a
+                            > next year/
+                            <p class="my-3">
+                                <span class="hidden sm:inline">-</span>
+                                In the past, I've done work for companies such as
+                                <a
+                                    class="font-semibold underline"
+                                    href="https://ukrepmed.com/">UKRepMed</a
+                                >
+                            </p>
+                            <p class="my-3">
+                                <span class="hidden sm:inline">-</span>
+                                Below are some of my projects in varying states of completion
+                                that i've tinkered with over the years<span
+                                    class="hidden sm:inline">:</span
+                                >
+                            </p>
+                            <div>
+                                <Project
+                                    url="https://project-omikron.chazzox.uk"
+                                    name="Project-Omikron"
+                                    description="A game development project im currently working on, currently learning godot!"
+                                />
+                                <Project
+                                    url="https://hydrova.chazzox.uk/"
+                                    name="Hydrova"
+                                    description="A retired Alternative Reddit client"
+                                />
+                                <Project
+                                    url="https://github.com/chazzox/discordify/"
+                                    name="discordify"
+                                    description="A Better Discord plugin"
+                                />
+                                <Project
+                                    url="https://github.com/rhul-compsoc/twitter-stream/"
+                                    name="Twitter Stream"
+                                    description="Twitter feed made for a RHUL SU night"
+                                />
+                                <Project
+                                    url="https://github.com/chazzox/faster-panopto/"
+                                    name="Faster Panopto"
+                                    description="Browser extension for panopto lectures"
+                                />
+                                <Project
+                                    url="https://hack.chazzox.uk/"
+                                    name="oxHack"
+                                    description="My submission to oxford hack 22"
+                                />
+                                <Project
+                                    url="https://replay.chazzox.uk/"
+                                    name="Replay"
+                                    description="A discover weekly backup tool"
+                                />
+                                <Project
+                                    url="https://github.com/chazzox/BetterDiscordPlugins/"
+                                    name="BetterDiscordPlugins"
+                                    description="A Monorepo containing all my BDP stuff"
+                                />
+                            </div>
                         </p>
-                        <p class="my-3">
-                            <span class="hidden sm:inline">-</span>
-                            Below are some of my projects in varying states of completion
-                            that i've tinkered with over the years<span
-                                class="hidden sm:inline">:</span
-                            >
-                        </p>
-                        <div>
-                            <Project
-                                url="https://project-omikron.chazzox.uk"
-                                name="Project-Omikron"
-                                description="A game development project im currently working on, currently learning godot!"
-                            />
-                            <Project
-                                url="https://hydrova.chazzox.uk/"
-                                name="Hydrova"
-                                description="A retiered Alternative Reddit client"
-                            />
-                            <Project
-                                url="https://github.com/chazzox/discordify/"
-                                name="discordify"
-                                description="A Better Discord plugin"
-                            />
-                            <Project
-                                url="https://github.com/rhul-compsoc/twitter-stream/"
-                                name="Twitter Stream"
-                                description="Twitter feed made for a RHUL SU night"
-                            />
-                            <Project
-                                url="https://github.com/chazzox/faster-panopto/"
-                                name="Faster Panopto"
-                                description="Browser extension for panopto lectures"
-                            />
-                            <Project
-                                url="https://hack.chazzox.uk/"
-                                name="oxHack"
-                                description="My submission to oxford hack 22"
-                            />
-                            <Project
-                                url="https://replay.chazzox.uk/"
-                                name="Replay"
-                                description="A discover weekly backup tool"
-                            />
-                            <Project
-                                url="https://github.com/chazzox/BetterDiscordPlugins/"
-                                name="BetterDiscordPlugins"
-                                description="A Monorepo containing all my BDP stuff"
-                            />
-                        </div>
                     </div>
                 </div>
             </div>
