--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,7 @@ import Project from "../components/project.astro";
                             > and im looking to re-continue my studies at <a
                                 class="font-semibold underline"
                                 href="https://www.royalholloway.ac.uk/">RHUL</a
-                            > next year/
+                            > next year.
                             <p class="my-3">
                                 <span class="hidden sm:inline">-</span>
                                 In the past, I've done work for companies such as
