--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,125 +3,93 @@ import Footer from "../components/footer.svelte";
 import Project from "../components/project.astro";
 ---
 
-<!doctype html>
-<html lang="en" class="bg-[#e8e8e8] dark:bg-black">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta
-            name="google-site-verification"
-            content="ZNKmWP18vZXTTbX5TIxztrzDVJdQTPCJavz4NQ5yGXU"
-        />
-        <link rel="icon" type="image/png" href="/favicon.ico" />
-        <title>Chazzox's Website</title>
-        <meta property="og:title" content="chazzox's personal website" />
-        <meta property="og:type" content="website" />
-        <meta property="og:description" content="Portfolio site for my projects" />
-        <meta name="description" content="Portfolio site for my projects" />
-        <meta property="og:image" content="/screenshot.jpg" />
-        <meta property="og:url" content="/" />
-        <meta name="twitter:card" content="/screenshot.jpg" />
-        <style>
-            @import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap");
-        </style>
-    </head>
-    <body>
-        <div
-            class="flex min-h-screen flex-col bg-[#e8e8e8] bg-cover bg-fixed bg-center text-black dark:bg-black dark:text-white"
-        >
-            <div class="flex flex-1 items-center justify-center">
-                <div
-                    class="relative m-6 max-w-2xl overflow-hidden rounded-xl border-[1px] border-gray-700 p-4 shadow-xl backdrop-blur-lg"
+<div
+    class="flex min-h-screen flex-col items-center justify-center bg-[#e8e8e8] bg-cover bg-fixed bg-center text-black dark:bg-black dark:text-white"
+>
+    <div
+        class="relative m-6 max-w-2xl overflow-hidden rounded-xl border-[1px] border-gray-700 p-4 shadow-xl backdrop-blur-lg"
+    >
+        <h1 class="text-2xl font-bold">
+            <span class="hidden sm:inline">#</span>
+            Charlie
+        </h1>
+        <h2 class="my-3 text-lg font-bold sm:text-xl">
+            <span class="hidden sm:inline">##</span>
+            Student/Full Stack Dev
+        </h2>
+        <p class="my-3">
+            <span class="hidden sm:inline">-</span>
+            Hi! I'm charlie, you may also know me as chazzox!
+        </p>
+        <p class="my-3">
+            <span class="hidden sm:inline">-</span>
+            <!-- I'm a full time Computer Science student @<a
+                    class="font-semibold underline"
+                    href="https://www.royalholloway.ac.uk/">RHUL</a
+                    >
+                    while doing freelance full Stack work on the side -->
+            Currently I'm an Innovation Engineer @ <a
+                class="font-semibold underline"
+                href="https://www.matillion.com/">Matillion</a
+            > and im looking to re-continue my studies at <a
+                class="font-semibold underline"
+                href="https://www.royalholloway.ac.uk/">RHUL</a
+            > next year.
+            <p class="my-3">
+                <span class="hidden sm:inline">-</span>
+                In the past, I've done work for companies such as
+                <a class="font-semibold underline" href="https://ukrepmed.com/"
+                    >UKRepMed</a
                 >
-                    <div class="relative z-50 text-center sm:text-left">
-                        <h1 class="text-2xl font-bold">
-                            <span class="hidden sm:inline">#</span>
-                            Charlie
-                        </h1>
-                        <h2 class="my-3 text-lg font-bold sm:text-xl">
-                            <span class="hidden sm:inline">##</span>
-                            Student/Full Stack Dev
-                        </h2>
-                        <p class="my-3">
-                            <span class="hidden sm:inline">-</span>
-                            Hi! I'm charlie, you may also know me as chazzox!
-                        </p>
-                        <p class="my-3">
-                            <span class="hidden sm:inline">-</span>
-                            <!-- I'm a full time Computer Science student @<a
-                                class="font-semibold underline"
-                                href="https://www.royalholloway.ac.uk/">RHUL</a
-                            >
-                            while doing freelance full Stack work on the side -->
-                            Currently I'm an Innovation Engineer @ <a
-                                class="font-semibold underline"
-                                href="https://www.matillion.com/">Matillion</a
-                            > and im looking to re-continue my studies at <a
-                                class="font-semibold underline"
-                                href="https://www.royalholloway.ac.uk/">RHUL</a
-                            > next year.
-                            <p class="my-3">
-                                <span class="hidden sm:inline">-</span>
-                                In the past, I've done work for companies such as
-                                <a
-                                    class="font-semibold underline"
-                                    href="https://ukrepmed.com/">UKRepMed</a
-                                >
-                            </p>
-                            <p class="my-3">
-                                <span class="hidden sm:inline">-</span>
-                                Below are some of my projects in varying states of completion
-                                that i've tinkered with over the years<span
-                                    class="hidden sm:inline">:</span
-                                >
-                            </p>
-                            <div>
-                                <Project
-                                    url="https://project-omikron.chazzox.uk"
-                                    name="Project-Omikron"
-                                    description="A game development project im currently working on, currently learning godot!"
-                                />
-                                <Project
-                                    url="https://hydrova.chazzox.uk/"
-                                    name="Hydrova"
-                                    description="A retired Alternative Reddit client"
-                                />
-                                <Project
-                                    url="https://github.com/chazzox/discordify/"
-                                    name="discordify"
-                                    description="A Better Discord plugin"
-                                />
-                                <Project
-                                    url="https://github.com/rhul-compsoc/twitter-stream/"
-                                    name="Twitter Stream"
-                                    description="Twitter feed made for a RHUL SU night"
-                                />
-                                <Project
-                                    url="https://github.com/chazzox/faster-panopto/"
-                                    name="Faster Panopto"
-                                    description="Browser extension for panopto lectures"
-                                />
-                                <Project
-                                    url="https://hack.chazzox.uk/"
-                                    name="oxHack"
-                                    description="My submission to oxford hack 22"
-                                />
-                                <Project
-                                    url="https://replay.chazzox.uk/"
-                                    name="Replay"
-                                    description="A discover weekly backup tool"
-                                />
-                                <Project
-                                    url="https://github.com/chazzox/BetterDiscordPlugins/"
-                                    name="BetterDiscordPlugins"
-                                    description="A Monorepo containing all my BDP stuff"
-                                />
-                            </div>
-                        </p>
-                    </div>
-                </div>
+            </p>
+            <p class="my-3">
+                <span class="hidden sm:inline">-</span>
+                Below are some of my projects in varying states of completion that i've
+                tinkered with over the years<span class="hidden sm:inline">:</span>
+            </p>
+            <div>
+                <Project
+                    url="https://project-omikron.chazzox.uk"
+                    name="Project-Omikron"
+                    description="A game development project im currently working on, currently learning godot!"
+                />
+                <Project
+                    url="https://hydrova.chazzox.uk/"
+                    name="Hydrova"
+                    description="A retired Alternative Reddit client"
+                />
+                <Project
+                    url="https://github.com/chazzox/discordify/"
+                    name="discordify"
+                    description="A Better Discord plugin"
+                />
+                <Project
+                    url="https://github.com/rhul-compsoc/twitter-stream/"
+                    name="Twitter Stream"
+                    description="Twitter feed made for a RHUL SU night"
+                />
+                <Project
+                    url="https://github.com/chazzox/faster-panopto/"
+                    name="Faster Panopto"
+                    description="Browser extension for panopto lectures"
+                />
+                <Project
+                    url="https://hack.chazzox.uk/"
+                    name="oxHack"
+                    description="My submission to oxford hack 22"
+                />
+                <Project
+                    url="https://replay.chazzox.uk/"
+                    name="Replay"
+                    description="A discover weekly backup tool"
+                />
+                <Project
+                    url="https://github.com/chazzox/BetterDiscordPlugins/"
+                    name="BetterDiscordPlugins"
+                    description="A Monorepo containing all my BDP stuff"
+                />
             </div>
-            <Footer client:load />
-        </div>
-    </body>
-</html>
+        </p>
+        <Footer client:load />
+    </div>
+</div>
