--- a/src/pages/blogs/index.astro
+++ b/src/pages/blogs/index.astro
@@ -8,12 +8,15 @@ const blogs = await getCollection(
 const categories = await getCollection("categories");
 ---
 
-{categories.map((c) => <div>{c.data.name}</div>)}
+<!-- active catagories selection -->{categories.map((c) => <div>{c.data.name}</div>)}
 
 {
-    blogs.map((v) => (
-        <a class="block" href={"/" + [v.collection, v.slug].join("/")}>
-            blogs {v.data.title}
-        </a>
-    ))
+    blogs
+        // active catagories filter
+        .filter(() => true)
+        .map((v) => (
+            <a class="block" href={"/" + [v.collection, v.slug].join("/")}>
+                blogs {v.data.title}
+            </a>
+        ))
 }
