--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,6 +49,13 @@ import Project from "../components/project.astro";
                     >
                 </p>
                 <p class="my-3">
+                    <span class="hidden sm:inline">-</span> I've started putting up some
+                    small
+                    <a class="font-semibold underline" href="/blogs"
+                        >blogs posts on various topics</a
+                    > on this site, feel free to check them out!
+                </p>
+                <p class="my-3">
                     <span class="hidden sm:inline">-</span>
                     Below are some of my projects in varying states of completion that
                     i've tinkered with over the years<span class="hidden sm:inline"
