--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Project from "../components/project.astro";
         class="flex min-h-screen flex-col items-center justify-center bg-[#e8e8e8] bg-cover bg-fixed bg-center text-black dark:bg-black dark:text-white"
     >
         <div
-            class="relative m-6 max-w-2xl overflow-hidden rounded-xl border-[1px] border-gray-700 p-4 shadow-xl backdrop-blur-lg"
+            class="relative m-6 max-w-2xl overflow-hidden rounded-xl border-1 border-gray-700 p-4 shadow-xl backdrop-blur-lg"
         >
             <h1 class="text-2xl font-bold">
                 <span class="hidden sm:inline">#</span>
@@ -64,45 +64,51 @@ import Project from "../components/project.astro";
                 </p>
                 <div>
                     <Project
-                        url="/order-of-st-lazarus"
-                        name="Project-Omikron"
+                        name="Order of St lazarus"
+                        url="/blogs?slug=order-of-st-lazarus"
                         description="A game development project im currently working on, currently learning godot!"
-                        openInNewTab={false}
                     />
                     <Project
                         url="https://hydrova.chazzox.uk/"
                         name="Hydrova"
                         description="A retired Alternative Reddit client"
+                        openInNewTab
                     />
                     <Project
                         url="https://github.com/chazzox/discordify/"
                         name="discordify"
                         description="A Better Discord plugin"
+                        openInNewTab
                     />
                     <Project
                         url="https://github.com/rhul-compsoc/twitter-stream/"
                         name="Twitter Stream"
                         description="Twitter feed made for a RHUL SU night"
+                        openInNewTab
                     />
                     <Project
                         url="https://github.com/chazzox/faster-panopto/"
                         name="Faster Panopto"
                         description="Browser extension for panopto lectures"
+                        openInNewTab
                     />
                     <Project
                         url="https://hack.chazzox.uk/"
                         name="oxHack"
                         description="My submission to oxford hack 22"
+                        openInNewTab
                     />
                     <Project
                         url="https://replay.chazzox.uk/"
                         name="Replay"
                         description="A discover weekly backup tool"
+                        openInNewTab
                     />
                     <Project
                         url="https://github.com/chazzox/BetterDiscordPlugins/"
                         name="BetterDiscordPlugins"
                         description="A Monorepo containing all my BDP stuff"
+                        openInNewTab
                     />
                 </div>
             </p>
