feat: significant overhaul of content system

--- a/src/layouts/index.astro
+++ b/src/layouts/index.astro
@@ -1,3 +1,9 @@
+---
+interface Props {
+    title?: string;
+}
+---
+
 <!doctype html>
 <html lang="en" class="bg-[#e8e8e8] dark:bg-black">
     <head>
@@ -8,7 +14,9 @@
             content="ZNKmWP18vZXTTbX5TIxztrzDVJdQTPCJavz4NQ5yGXU"
         />
         <link rel="icon" type="image/png" href="/favicon.ico" />
-        <title>Chazzox's Website</title>
+        <title>
+            Chazzox's Website{!!Astro.props.title ? " - " + Astro.props.title : ""}
+        </title>
         <meta property="og:title" content="chazzox's personal website" />
         <meta property="og:type" content="website" />
         <meta property="og:description" content="Portfolio site for my projects" />
@@ -23,6 +31,9 @@
         </script>
         <style>
             @import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap");
+            * {
+                box-sizing: border-box !important;
+            }
         </style>
     </head>
     <body>
