--- a/src/pages/blogs/index.astro
+++ b/src/pages/blogs/index.astro
@@ -1,28 +1,15 @@
 ---
-import { getCollection } from "astro:content";
 import MainLayout from "../../layouts/index.astro";
 import Tags from "@components/blog-utils/tags.svelte";
 import CurrentBlogs from "@components/blog-utils/current-blogs.svelte";
-import GenericLink from "@components/generic-link.astro";
-import HideNoSlug from "@components/hide-no-slug.svelte";
-
-const posts = await getCollection("blogs");
-
-const tags = posts.reduce((prev, cur) => {
-    cur.data.tags?.forEach((t) => (prev.includes(t.id) ? null : prev.push(t.id)));
-    return prev;
-}, [] as string[]);
+import GenericLink from "@components/blog-utils/generic-link.astro";
+import HideNoSlug from "@components/blog-utils/hide-no-slug.svelte";
 ---
 
 <MainLayout>
     <div class="p-10">
-        <div class="flex gap-3">
-            <Tags client:load initialTags={tags} />
-        </div>
-
-        <div>
-            <CurrentBlogs client:load posts={posts} />
-        </div>
+        <Tags client:load />
+        <CurrentBlogs client:load />
 
         <div class="flex flex-col gap-4">
             <HideNoSlug client:load>
