--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import TextLink from "@components/text-link.astro";
                 <span class="hidden sm:inline">-</span>
                 I'm Currently innovating @ <TextLink
                     href="https://www.matillion.com/">Matillion</TextLink
-                > as well <TextLink href="/blogs?slug=university"
+                > as well <TextLink target="_self" href="/blogs?slug=university"
                     >studying computer science</TextLink
                 > at <TextLink href="https://www.royalholloway.ac.uk/">RHUL</TextLink
                 > next year.
